--- a/lex.yml
+++ b/lex.yml
@@ -58,6 +58,24 @@ static int char_by_char(char *tok, char *cmdline, int *j, int *c, int *count);
 
 
 
+
+
+
+
+// int main(int ac, char *av[], char **envp)
+// {
+// 	const char *CAP_LETTERS;
+// 	const char *SML_LETTERS;
+// 	CAP_LETTERS = "A|B|C|D|E|F|G|H|I|J|K|L|M|N|O|P|Q|R|S|T|U|V|W|X|Y|Z";
+// 	SML_LETTERS = "a|b|c|d|e|f|g|h|i|j|k|l|m|n|o|p|q|r|s|t|u|v|w|x|y|z";
+// 	char **lex = ft_split(CAP_LETTERS, '|');
+// 	int i = -1;
+// 	while(envp[++i])
+// 		printf("%s\n", envp[i]);
+// }
+
+
+
 if(contains("<<", cmdline, &pos))
 	{
 		int end;
