--- a/lex.yml
+++ b/lex.yml
@@ -34,6 +34,23 @@ if(ft_strchr(cmdline, '<'))
 }
 
 
+typedef struct s_heredoc
+{
+    char *term;
+	char *delimiter;
+	char *heredoc;
+} t_heredoc;
+
+typedef struct s_cmds
+{
+    char    *fullcmd;
+    char    *path;
+    int     istream;
+    int     ostream;
+}   t_cmds;
+
+
+
 static int char_by_char(char *tok, char *cmdline, int *j, int *c, int *count);
 
 // int char_by_char(char *tok, char *cmdline, int *j, int *c, int *count)
