--- a/lex.yml
+++ b/lex.yml
@@ -34,6 +34,8 @@ if(ft_strchr(cmdline, '<'))
 }
 
 
+///usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin
+
 		// if(cmdline[i] == '>')
 		// 	redirection(cmdline, &i, tokens, '>');
 		// if(cmdline[i] == '<')
