--- a/lex.yml
+++ b/lex.yml
@@ -34,6 +34,9 @@ if(ft_strchr(cmdline, '<'))
 }
 
 
+		// if (cmdline[i] && (cmdline[i] == '\"' || cmdline[i] == '\''))
+		// 	expansion(cmdline, &i, cmdline[i], &tokens);
+
 ///usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin
 
 		// if(cmdline[i] == '>')
