--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "minishell_header.h": "c",
         "types.h": "c",
         "wait.h": "c",
-        "features.h": "c"
+        "features.h": "c",
+        "__config": "c"
     }
 }
