--- a/lex.yml
+++ b/lex.yml
@@ -47,7 +47,28 @@ split(def, ' '); -> ["echo", "hello", "userworld", "barev"];
 										token_replace(def[i], 3, ' ');
 
 
-<<<<<<< HEAD
+
+
+
+
+
+// while(table->token != NULL)
+// {
+//     printf("[%s] : %d\n", table->token->tok, table->token->type);
+//     table->token = table->token->next;
+// }
+ // printf("%s\n", tree->cmds->arg_pack[2]);
+        // if(tree)
+        //     execute_command(tree, table, envp);
+
+
+
+
+
+
+
+
+
 (*table)->heredoc = malloc(sizeof(t_heredoc));
 	if(contains("<<", cmdline, &pos))
 	{
@@ -56,7 +77,6 @@ split(def, ' '); -> ["echo", "hello", "userworld", "barev"];
 		end = find_space_orpipe(cmdline+pos);
 		(*table)->heredoc->delimiter = ft_substr(cmdline, pos, end);
 	}
-=======
 Parsing steps
 
 Step 1: Check TYPE of token if WORD | SPACE | EXP_FIELD
@@ -72,7 +92,6 @@ Step 1: Check TYPE of token if WORD | SPACE | EXP_FIELD
 						token_replacment(split[i], 3, ' ');
 	Substep 1.6: Output -> split = ["echo", "user helloworld"]
 	
->>>>>>> master
 
 
 echo "user hello"world
