--- a/lex.yml
+++ b/lex.yml
@@ -16,14 +16,11 @@ if(ft_strchr(cmdline, '<'))
 	int main(void)
 {
 	 id1 = fork(){
-
 		 id1 = ?
 		 main = parentProcessId
 		 id2 = fork(){
 			 id1 = parentProcessId
 			 id2 = ?
-
-       
 			 printf("ok");
 		 }
 		 printf("ok");
@@ -36,6 +33,11 @@ if(ft_strchr(cmdline, '<'))
 	 printf("ok");
 }
 
+   // if(typeis_pipe((*token)->type))
+        //     //do something
+        // if(typeis_redir((*token)->type))
+        //     //do something
+
 char *abc = echo                   hello                    world
 split(abc, ' '); -> ["echo", "hello", "world"]
 
@@ -45,7 +47,28 @@ split(def, ' '); -> ["echo", "hello", "userworld", "barev"];
 										token_replace(def[i], 3, ' ');
 
 
-<<<<<<< HEAD
+
+
+
+
+
+// while(table->token != NULL)
+// {
+//     printf("[%s] : %d\n", table->token->tok, table->token->type);
+//     table->token = table->token->next;
+// }
+ // printf("%s\n", tree->cmds->arg_pack[2]);
+        // if(tree)
+        //     execute_command(tree, table, envp);
+
+
+
+
+
+
+
+
+
 (*table)->heredoc = malloc(sizeof(t_heredoc));
 	if(contains("<<", cmdline, &pos))
 	{
@@ -54,7 +77,6 @@ split(def, ' '); -> ["echo", "hello", "userworld", "barev"];
 		end = find_space_orpipe(cmdline+pos);
 		(*table)->heredoc->delimiter = ft_substr(cmdline, pos, end);
 	}
-=======
 Parsing steps
 
 Step 1: Check TYPE of token if WORD | SPACE | EXP_FIELD
@@ -70,7 +92,6 @@ Step 1: Check TYPE of token if WORD | SPACE | EXP_FIELD
 						token_replacment(split[i], 3, ' ');
 	Substep 1.6: Output -> split = ["echo", "user helloworld"]
 	
->>>>>>> master
 
 
 echo "user hello"world
