--- a/lex.yml
+++ b/lex.yml
@@ -30,6 +30,16 @@ if(ft_strchr(cmdline, '<'))
 		 printf("ok");
 	 }
 
+
+	 static void print_arguments(t_cmds **commands)
+{
+	while(*commands != NULL)
+	{
+		printf("%s\n", (*commands)->arguments);
+		commands = &(*commands)->next;
+	}
+}
+
 	 printf("ok");
 }
 
