--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,17 @@
         "wait.h": "c",
         "features.h": "c",
         "__config": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "string.h": "c",
+        "builtins.h": "c",
+        "structs.h": "c",
+        "libft.h": "c",
+        "history.h": "c",
+        "stat.h": "c",
+        "termios.h": "c",
+        "fcntl.h": "c",
+        "stdlib.h": "c",
+        "unistd.h": "c",
+        "signal.h": "c"
     }
 }
