--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,22 @@
 {
     "files.associations": {
-        "minishell_header.h": "c",
-        "types.h": "c",
-        "wait.h": "c",
-        "features.h": "c",
-        "__config": "c",
-        "stdio.h": "c",
-        "string.h": "c",
-        "builtins.h": "c",
-        "structs.h": "c",
-        "libft.h": "c",
-        "history.h": "c",
-        "stat.h": "c",
-        "termios.h": "c",
-        "fcntl.h": "c",
-        "stdlib.h": "c",
-        "unistd.h": "c",
-        "signal.h": "c"
-    }
+		"minishell_header.h": "c",
+		"types.h": "c",
+		"wait.h": "c",
+		"features.h": "c",
+		"__config": "c",
+		"stdio.h": "c",
+		"string.h": "c",
+		"builtins.h": "c",
+		"structs.h": "c",
+		"libft.h": "c",
+		"history.h": "c",
+		"stat.h": "c",
+		"termios.h": "c",
+		"fcntl.h": "c",
+		"stdlib.h": "c",
+		"unistd.h": "c",
+		"signal.h": "c",
+		"__node_handle": "c"
+	}
 }
