--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,11 @@
 		"stdlib.h": "c",
 		"unistd.h": "c",
 		"signal.h": "c",
-		"__node_handle": "c"
+		"__node_handle": "c",
+		"__locale": "c",
+		"ostream": "c",
+		"stdbool.h": "c",
+		"errno.h": "c",
+		"readline.h": "c"
 	}
 }
